@@ -1,24 +1,62 @@
 <?php
+
 /**
  * Print links to JSON files representing query results.
- * @file
- * @ingroup SMWQuery
- */
-
-/**
- * Printer for creating a link to JSON files.
  *
- * @author Fabian Howahl
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ * http://www.gnu.org/copyleft/gpl.html
+ *
+ * @since 1.5.3
+ *
+ * @file SWM_QP_JSONlink.php
  * @ingroup SMWQuery
+ *
+ * @licence GNU GPL v2 or later
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ * @author mwjames
+ * @author Fabian Howahl
  */
 class SMWJSONResultPrinter extends SMWResultPrinter {
-	
-	protected $types = array( '_wpg' => 'text', '_num' => 'number', '_dat' => 'date', '_geo' => 'text', '_str' => 'text' );
 
+	/**
+	 * Returns human readable label for this printer
+	 *
+	 * @return string
+	 */
+	public function getName() {
+		return wfMsg( 'smw_printername_json' );
+	}
+
+	/**
+	 * Returns the mimetype string
+	 *
+	 * @param SMWQueryResult $res
+	 *
+	 * @return string
+	 */
 	public function getMimeType( $res ) {
 		return 'application/JSON';
 	}
 
+	/**
+	 * Returns a filename that is to be sent to the caller
+	 *
+	 * @param SMWQueryResult $res
+	 *
+	 * @return string
+	 */
 	public function getFileName( $res ) {
 		if ( $this->getSearchLabel( SMW_OUTPUT_WIKI ) !== '' ) {
 			return str_replace( ' ', '_', $this->getSearchLabel( SMW_OUTPUT_WIKI ) ) . '.json';
@@ -27,109 +65,219 @@ class SMWJSONResultPrinter extends SMWResultPrinter {
 		}
 	}
 
+	/**
+	 * File exports use MODE_INSTANCES on special pages (so that instances are
+	 * retrieved for the export) and MODE_NONE otherwise (displaying just a download link).
+	 *
+	 * @param $context
+	 *
+	 * @return integer
+	 */
 	public function getQueryMode( $context ) {
 		return ( $context == SMWQueryProcessor::SPECIAL_PAGE ) ? SMWQuery::MODE_INSTANCES : SMWQuery::MODE_NONE;
 	}
 
-	public function getName() {
-		return wfMsg( 'smw_printername_json' );
-	}
-
+	/**
+	 * Returns a filename that is to be sent to the caller
+	 *
+	 * @param SMWQueryResult $res
+	 * @param $outputmode integer
+	 *
+	 * @return string
+	 */
 	protected function getResultText( SMWQueryResult $res, $outputmode ) {
-		global $wgServer, $wgScriptPath;
-		if ( $outputmode == SMW_OUTPUT_FILE ) { // create detached JSON file
-			$itemstack = array(); // contains Items for the items section
-			$propertystack = array(); // contains Properties for the property section
 
-			// generate property section
-			foreach ( $res->getPrintRequests() as $pr ) {
-				if ( $pr->getMode() != SMWPrintRequest::PRINT_THIS ) {
-					if ( array_key_exists( $pr->getTypeID(), $this->types ) ) {
-						$propertystack[] = '"' . str_replace( " ", "_", strtolower( $pr->getLabel() ) ) . '" : { "valueType": "' . $this->types[$pr->getTypeID()] . '" }';
-					} else {
-						$propertystack[] = '"' . str_replace( " ", "_", strtolower( $pr->getLabel() ) ) . '" : { "valueType": "text" }';
-					}
-				}
-			}
-			$properties = "\"properties\": {\n\t\t" . implode( ",\n\t\t", $propertystack ) . "\n\t}";
+		if ( $outputmode == SMW_OUTPUT_FILE ) {
 
-			// generate items section
-			while ( ( /* array of SMWResultArray */ $row = $res->getNext() ) !== false ) {
-				$rowsubject = false; // the wiki page value that this row is about
-				$valuestack = array(); // contains Property-Value pairs to characterize an Item
-				$addedLabel = false;
-				
-				foreach ( $row as /* SMWResultArray */ $field ) {
-					$pr = $field->getPrintRequest();
-					
-					if ( $rowsubject === false && !$addedLabel ) {
-						$valuestack[] = '"label": "' . $field->getResultSubject()->getTitle()->getFullText() . '"';
-						$addedLabel = true;
-					}
-					
-					if ( $pr->getMode() != SMWPrintRequest::PRINT_THIS ) {
-						$values = array();
-						$jsonObject = array();
-						
-						while ( ( $dataValue = $field->getNextDataValue() ) !== false ) {
-							switch ( $dataValue->getTypeID() ) {
-								case '_geo':
-									$jsonObject[] = $dataValue->getDataItem()->getCoordinateSet();
-									$values[] = FormatJson::encode( $dataValue->getDataItem()->getCoordinateSet() );
-									break;
-								case '_num':
-									$jsonObject[] = $dataValue->getDataItem()->getNumber();
-									break;
-								case '_dat':
-									$jsonObject[] = 
-										$dataValue->getYear() . '-' .
-										str_pad( $dataValue->getMonth(), 2, '0', STR_PAD_LEFT ) . '-' .
-										str_pad( $dataValue->getDay(), 2, '0', STR_PAD_LEFT ) . ' ' .
-										$dataValue->getTimeString();
-									break;
-								default:
-									$jsonObject[] = $dataValue->getShortText( $outputmode, null );
-							}
-						}
-						
-						if ( !is_array( $jsonObject ) || count( $jsonObject ) > 0 ) {
-							$valuestack[] =
-								'"' . str_replace( ' ', '_', strtolower( $pr->getLabel() ) ) 
-								. '": ' . FormatJson::encode( $jsonObject ) . '';
-						}
-					}
-				}
-				
-				if ( $rowsubject !== false ) { // stuff in the page URI and some category data
-					$valuestack[] = '"uri" : "' . $wgServer . $wgScriptPath . '/index.php?title=' . $rowsubject->getPrefixedText() . '"';
-					$page_cats = smwfGetStore()->getPropertyValues( $rowsubject, new SMWDIProperty( '_INST' ) ); // TODO: set limit to 1 here
-					
-					if ( count( $page_cats ) > 0 ) {
-						$valuestack[] = '"type" : "' . reset($page_cats)->getShortHTMLText() . '"';
-					}
-				}
-
-				// create property list of item
-				$itemstack[] = "\t{\n\t\t\t" . implode( ",\n\t\t\t", $valuestack ) . "\n\t\t}";
+			// Bail out in case there are no results
+			if ( $res->getCount() == 0 ){
+				return;
 			}
 
-			$items = "\"items\": [\n\t" . implode( ",\n\t", $itemstack ) . "\n\t]";
-
-			// check whether a callback function is required
-			if ( array_key_exists( 'callback', $this->params ) ) {
-				$result = htmlspecialchars( $this->params['callback'] ) . "({\n\t" . $properties . ",\n\t" . $items . "\n})";
+			if ( $this->params['export'] == 'obsolete' ) {
+				$result = $this->getObsoleteJSON( $res , $outputmode );
+			} elseif ( $this->params['export'] == 'simplified' ) {
+				$result = $this->getSimplifiedJSON( $res ) ;
 			} else {
-				$result = "{\n\t" . $properties . ",\n\t" . $items . "\n}";
+				$result = $this->getCompleteJSON( $res );
 			}
 
-		} else { // just create a link that points to the JSON file
+		} else {
+			// Create a link that points to the JSON file
 			$result = $this->getLink( $res, $outputmode )->getText( $outputmode, $this->mLinker );
-			
-			// yes, our code can be viewed as HTML if requested, no more parsing needed
+
+			// Code can be viewed as HTML if requested, no more parsing needed
 			$this->isHTML = $outputmode == SMW_OUTPUT_HTML;
 		}
 
 		return $result;
+	}
+
+	/**
+	 * Complete JSON layer
+	 *
+	 * @since 1.8
+	 *
+	 * @param SMWQueryResult $res
+	 * @param boolean $isPretty
+	 *
+	 * @return string
+	 */
+	public static function getCompleteJSON( SMWQueryResult $res, $isPretty = false ) {
+		$serialize = array_merge( SMWDISerializer::getSerializedQueryResult( $res ), array ( 'rows' => $res->getCount() ) );
+		return FormatJSON::encode( $serialize, $isPretty );
+	}
+
+	/**
+	 * Simplified JSON layer
+	 *
+	 * @since 1.8
+	 *
+	 * @param SMWQueryResult $res
+	 * @param boolean $isPretty
+	 *
+	 * @return string
+	 */
+	public static function getSimplifiedJSON( SMWQueryResult $res, $isPretty = false ) {
+		$results = array();
+		$printRequests = array();
+
+		foreach ( $res->getPrintRequests() as /* SMWPrintRequest */ $printRequest ) {
+			$printRequests[$printRequest->getLabel()] = array(
+				'label'  => $printRequest->getLabel(),
+				'typeid' => $printRequest->getTypeID()
+			);
+		}
+
+		foreach ( $res->getResults() as /* SMWDIWikiPage */ $diWikiPage ) {
+			$result = array( );
+
+			foreach ( $res->getPrintRequests() as /* SMWPrintRequest */ $printRequest ) {
+				$serializationItems = array();
+				$resultAarray = new SMWResultArray( $diWikiPage, $printRequest, $res->getStore() );
+
+				if ( $printRequest->getMode() === SMWPrintRequest::PRINT_THIS ) {
+					$dataItems = $resultAarray->getContent();
+					$temp =   SMWDISerializer::getSerialization( array_shift( $dataItems ) );
+					$result += array ( 'label' => $temp["fulltext"] );
+				}
+				else {
+					$serializationItems = array_map(
+						array( 'SMWDISerializer', 'getSerialization' ),
+						$resultAarray->getContent()
+					);
+
+					$type  = $printRequest->getTypeID();
+					$items = array();
+
+					foreach ( $serializationItems as $item ) {
+					  if ( $type == "_wpg" ) {
+								$items[] = $item["fulltext"];
+						} else {
+								$items[] = $item;
+						}
+					}
+					$result[$printRequest->getLabel()] = $items;
+				}
+			}
+			$results[$diWikiPage->getTitle()->getFullText()] = $result;
+		}
+
+		return FormatJSON::encode( array( 'printrequests' => $printRequests, 'results' => $results, 'rows' => $res->getCount() ), $isPretty );
+	}
+
+	/**
+	 * Compatibility layer for obsolete JSON format
+	 *
+	 * @since 1.8
+	 * @deprecated This method will be removed in 1.10
+	 *
+	 * @param SMWQueryResult $res
+	 * @param $outputmode integer
+	 *
+	 * @return string
+	 */
+	private function getObsoleteJSON( SMWQueryResult $res, $outputmode ){
+		$types = array( '_wpg' => 'text', '_num' => 'number', '_dat' => 'date', '_geo' => 'text', '_str' => 'text' );
+
+		$itemstack = array(); // contains Items for the items section
+		$propertystack = array(); // contains Properties for the property section
+
+		// generate property section
+		foreach ( $res->getPrintRequests() as $pr ) {
+			if ( $pr->getMode() != SMWPrintRequest::PRINT_THIS ) {
+				if ( array_key_exists( $pr->getTypeID(), $types ) ) {
+					$propertystack[] = '"' . str_replace( " ", "_", strtolower( $pr->getLabel() ) ) . '" : { "valueType": "' . $types[$pr->getTypeID()] . '" }';
+				} else {
+					$propertystack[] = '"' . str_replace( " ", "_", strtolower( $pr->getLabel() ) ) . '" : { "valueType": "text" }';
+				}
+			}
+		}
+		$properties = "\"properties\": {\n\t\t" . implode( ",\n\t\t", $propertystack ) . "\n\t}";
+
+		// generate items section
+		while ( ( /* array of SMWResultArray */ $row = $res->getNext() ) !== false ) {
+			$rowsubject = false; // the wiki page value that this row is about
+			$valuestack = array(); // contains Property-Value pairs to characterize an Item
+			$addedLabel = false;
+
+			foreach ( $row as /* SMWResultArray */ $field ) {
+				$pr = $field->getPrintRequest();
+
+				if ( $rowsubject === false && !$addedLabel ) {
+					$valuestack[] = '"label": "' . $field->getResultSubject()->getTitle()->getFullText() . '"';
+					$addedLabel = true;
+				}
+
+				if ( $pr->getMode() != SMWPrintRequest::PRINT_THIS ) {
+					$values = array();
+					$jsonObject = array();
+
+					while ( ( $dataValue = $field->getNextDataValue() ) !== false ) {
+						switch ( $dataValue->getTypeID() ) {
+							case '_geo':
+								$jsonObject[] = $dataValue->getDataItem()->getCoordinateSet();
+								$values[] = FormatJson::encode( $dataValue->getDataItem()->getCoordinateSet() );
+								break;
+							case '_num':
+								$jsonObject[] = $dataValue->getDataItem()->getNumber();
+								break;
+							case '_dat':
+								$jsonObject[] =
+									$dataValue->getYear() . '-' .
+									str_pad( $dataValue->getMonth(), 2, '0', STR_PAD_LEFT ) . '-' .
+									str_pad( $dataValue->getDay(), 2, '0', STR_PAD_LEFT ) . ' ' .
+									$dataValue->getTimeString();
+								break;
+							default:
+								$jsonObject[] = $dataValue->getShortText( $outputmode, null );
+						}
+					}
+
+					if ( !is_array( $jsonObject ) || count( $jsonObject ) > 0 ) {
+						$valuestack[] =
+							'"' . str_replace( ' ', '_', strtolower( $pr->getLabel() ) )
+							. '": ' . FormatJson::encode( $jsonObject ) . '';
+					}
+				}
+			}
+
+			if ( $rowsubject !== false ) { // stuff in the page URI and some category data
+				$valuestack[] = '"uri" : "' . $wgServer . $wgScriptPath . '/index.php?title=' . $rowsubject->getPrefixedText() . '"';
+				$page_cats = smwfGetStore()->getPropertyValues( $rowsubject, new SMWDIProperty( '_INST' ) ); // TODO: set limit to 1 here
+
+				if ( count( $page_cats ) > 0 ) {
+					$valuestack[] = '"type" : "' . reset($page_cats)->getShortHTMLText() . '"';
+				}
+			}
+
+			// create property list of item
+			$itemstack[] = "\t{\n\t\t\t" . implode( ",\n\t\t\t", $valuestack ) . "\n\t\t}";
+		}
+
+		$items = "\"items\": [\n\t" . implode( ",\n\t", $itemstack ) . "\n\t]";
+
+		return "{\n\t" . $properties . ",\n\t" . $items . "\n}";
 	}
 
 	/**
@@ -147,7 +295,14 @@ class SMWJSONResultPrinter extends SMWResultPrinter {
 		$definitions['searchlabel']->setDefault( wfMsgForContent( 'smw_json_link' ) );
 		$definitions['limit']->setDefault( 100 );
 
+		$definitions['export'] = array(
+			'name' => 'export',
+			'type' => 'string',
+			'default' => 'complete',
+			'message' => 'smw-paramdesc-export',
+			'values' => array( 'obsolete', 'simplified', 'complete' ),
+		);
+
 		return $definitions;
 	}
-
 }
